--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @font-face { font-family: SanFran; src: url('System San Francisco Display Regular.TTF'); } 
+@font-face { font-family: Open-Sans; src: url('open-sans/OpenSans-Regular.TTF'); } 
 
 
 h1 {
@@ -14,7 +15,7 @@ body {
 	padding-left: 80px;
 	padding-top: 20px;
 	color: #003366;
-	font-family: SanFran;
+	font-family: Open-Sans;
 }
 
 a {
