--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@font-face { font-family: SanFran; src: url('System San Francisco Display Regular.TTF'); } 
-@font-face { font-family: Open-Sans; src: url('open-sans/OpenSans-Regular.TTF'); } 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
 
 
 h1 {
@@ -15,7 +14,8 @@ body {
 	padding-left: 80px;
 	padding-top: 20px;
 	color: #003366;
-	font-family: Open-Sans;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
 }
 
 a {
