--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
 
 
 h1 {
@@ -14,7 +14,7 @@ body {
 	padding-left: 80px;
 	padding-top: 20px;
 	color: #003366;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 300;
 }
 
