--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ p {
 }
 
 body {
-	padding-right: 80px;
-	padding-left: 80px;
+	/* padding-right: 80px; */
+	/* padding-left: 80px; */
 	padding-top: 20px;
 	color: #003366;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -45,9 +45,9 @@ ul {
 	margin: 0 auto;
 	display: block;
 	padding-top: 30px;
-	width: 550px;
-	padding-left: 50px;
-	padding-right: 50px;
+	/* width: 550px; */
+	padding-left: 2em;
+	padding-right: 3em;
 }
 
 .links {
@@ -56,8 +56,36 @@ ul {
 	/* align-items: center; */
 	text-align: center;
 	font-size: 22px;
+	display: block;
 }
 
 .bio {
 	line-height: 1.3;
+}
+
+@media screen and (max-width:768px) {
+  .container {
+		padding-left: 2em;
+		padding-right: 3em;
+	}
+
+	body {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+
+}
+
+@media screen and (min-width:768px) {
+  .container {
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 550px;
+	}
+
+	body {
+		padding-left: 80px;
+		padding-right: 80px;
+	}
+
 }
