--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);*/
-
+body{
+	background-color: #faebd7;
+}
 
 h1 {
 	font-weight: 400;
