--- a/style.css
+++ b/style.css
@@ -1,30 +1,37 @@
 /*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);*/
 body{
-	background-color: #faebd7;
+	/* background-color: #faebd7; */
 }
 
 h1 {
 	font-weight: 400;
 	letter-spacing: -1px;
+	font-size: 4em;
+	/* text-transform: lowercase; */
+	margin-bottom: 0;
+	text-align: center;
 }
 
 p {
-	font-size: 20px;
+	font-size: 25px;
+	text-align: left;
 }
 
 body {
 	/* padding-right: 80px; */
 	/* padding-left: 80px; */
-	padding-top: 20px;
-	color: #003366;
+	/* padding-top: 20px; */
+	color: #000017;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 }
 
 a {
 	/* font-size: 20px; */
-	color: #003366;
+	color: #000017;
 }
+
+.links a:link {border-bottom: none;}
 a:link{
 	text-decoration: none;
 	border-bottom: 1px dotted;
@@ -37,20 +44,21 @@ a:hover{
 li {
 	display: inherit;
 	padding-bottom: 15px;
-	font-size: 17px;
+	font-size: 20px;
 }
 
 ul {
-	padding-left: 0em;
+	padding-left: 1em;
+	text-align: left;
 }
 
 .container {
 	margin: 0 auto;
 	display: block;
-	padding-top: 30px;
+	/* padding-top: 30px; */
 	/* width: 550px; */
-	padding-left: 2em;
-	padding-right: 3em;
+	/* padding-left: 2em; */
+	/* padding-right: 3em; */
 }
 
 .links {
@@ -60,10 +68,19 @@ ul {
 	text-align: center;
 	font-size: 22px;
 	display: block;
+	/* padding-right: 4em; */
+	/* padding-left: 3em; */
+}
+
+.links a {
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 26px;
 }
 
 .bio {
 	line-height: 1.3;
+	text-align: -webkit-left;
 }
 
 @media screen and (max-width:768px) {
@@ -75,14 +92,17 @@ ul {
 		padding-left: 0px;
 		padding-right: 0px;
 	}
+	h1{
+		font-size: 52px;
+	}
 
 }
 
 @media screen and (min-width:768px) {
   .container {
-		padding-left: 50px;
-		padding-right: 50px;
-		width: 550px;
+		padding-left: 9em;
+		padding-right: 9em;
+		text-align: center;
 	}
 
 	body {
