--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 	/* padding-left: 80px; */
 	/* padding-top: 20px; */
 	color: #000017;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 }
 
