--- a/style.css
+++ b/style.css
@@ -2,11 +2,7 @@
 body{
 	/* background-color: #faebd7; */
 }
-
-.container {
-	padding-left: 14em !important;
-	padding-right: 14em !important;
-}
+@media screen and (min-width:768px) {
 
 h1 {
 	font-weight: 400;
@@ -104,8 +100,8 @@ ul {
 
 @media screen and (min-width:768px) {
   .container {
-		padding-left: 9em;
-		padding-right: 9em;
+		padding-left: 14em !important;
+		padding-right: 14em !important;
 		text-align: center;
 	}
 
